force-app/main/default/objects/Destination3__c/Destination3__c.object-meta.xml
<CustomObject>
    <label>宛先③</label>
    <nameField>
        <label>宛先③</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>