force-app/main/default/objects/Destination3__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>部（支店）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>