force-app/main/default/objects/Destination3__c/fields/DepartmentCode__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCode__c</fullName>
    <label>部署コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>