force-app/main/default/objects/Destination3__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>宛先メールアドレス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>